# SA-Companion

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/sa/companion/: MainActivity.kt  MainActivity.kt.bak
app/src/main/java/com/sa/companion/ai/: GroqWhisper.kt  WhisperEngine.kt
app/src/main/java/com/sa/companion/audio/: AudioRecorder.kt
app/src/main/java/com/sa/companion/bridge/: BridgeClient.kt
app/src/main/java/com/sa/companion/commands/: Task.kt  TaskExecutor.kt  TaskParser.kt
app/src/main/java/com/sa/companion/router/: CommandRouter.kt
app/src/main/java/com/sa/companion/service/: AssistantService.kt
app/src/main/res/drawable/: ic_sa.xml
app/src/main/res/values/: strings.xml  themes.xml
